# Power-Consumption-Monitor

./: .gitignore  README.md  Readme.docx  design.ui  intel.py  main.py  pyproject.toml  utility.py
